# resonance-api-client

./: Cargo.toml  README.md
.github/workflows/: ci.yml
compose-macros/: Cargo.toml
examples/async/: Cargo.toml
examples/async/examples/: benchmark_bulk_xt.rs  check_extrinsic_events.rs  compose_extrinsic.rs  custom_nonce.rs  dilithium_transfer_proofs.rs  get_blocks.rs  get_storage.rs  merkle_airdrop_cli.rs  new_json_rpc_api_calls.rs  print_metadata.rs  proof_test.rs  query_runtime_api.rs  referenda_active_list.rs  referenda_create_new.rs  referenda_preimage_create.rs  resonance_runtime.compact.compressed.wasm  runtime_update_async.rs  runtime_upgrade_with_referenda.rs  staking_batch_payout_untested.rs  storage_proof.rs  subscribe_events.rs  sudo.rs  transfer_proof.rs
examples/sync/examples/: runtime_update_sync.rs  transfer_with_tungstenite_client.rs
examples/wasm/examples/: wasm_example.rs
keystore/: Cargo.toml
node-api/: Cargo.toml
primitives/: Cargo.toml
primitives/src/config/: mod.rs  resonance_runtime_config.rs  rococo_runtime_config.rs
src/api/rpc_api/: events.rs  state.rs
src/extrinsic/: mod.rs
test-no-std/: Cargo.toml
testing/async/: Cargo.toml
testing/async/examples/: author_tests.rs  chain_tests.rs  dispatch_errors_tests.rs  events_tests.rs  frame_system_tests.rs  pallet_balances_tests.rs  pallet_transaction_payment_tests.rs  runtime_api_tests.rs  state_tests.rs
testing/sync/examples/: tungstenite_client_test.rs
