[package]
name = "ac-compose-macros"
version = "1.17.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/scs/substrate-api-client"
description = "Macros for creating Substrate extrinsics and rpc calls"
readme = "README.md"
categories = ["no-std"]

[dependencies]
log = { workspace = true }
maybe-async = { workspace = true }
ac-primitives = { workspace = true, default-features = false }

[dev-dependencies]
ac-node-api = { workspace = true }
frame-metadata = { workspace = true }
codec = { workspace = true }

[features]
default = ["std", "sync-api"]
sync-api = ["maybe-async/is_sync"]
disable_target_static_assertions = [
    "ac-primitives/disable_target_static_assertions",
]
std = [
    "log/std",
    "ac-primitives/std",
]
