[package]
name = "ac-node-api"
version = "1.17.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/scs/substrate-api-client"
description = "Substrate node type definitions and helpers for the substrate-api-client"
readme = "README.md"
categories = ["no-std"]

[dependencies]
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", workspace = true, features = ["derive", "bit-vec"], default-features = false }
derive_more = { version = "2.0", default-features = false, features = ["from"] }
either = { version = "1.6", default-features = false }
frame-metadata = { workspace = true, default-features = false, features = ["current", "serde_full", "decode"] }
hex = { version = "0.4", default-features = false }
log = { version = "0.4", default-features = false }
scale-bits = { version = "0.7", default-features = false, features = ["scale-info", "serde"] }
scale-decode = { version = "0.16", default-features = false, features = ["primitive-types", "derive"] }
scale-encode = { version = "0.10", default-features = false, features = ["bits", "primitive-types", "derive"] }
scale-info = { version = "2.0", features = ["derive", "decode", "bitvec"], default-features = false }
scale-value = { version = "0.18", default-features = false }
serde = { workspace = true, features = ["derive"], default-features = false }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }

# substrate
sp-core = { workspace = true }
sp-crypto-hashing = { workspace = true }
sp-runtime = { workspace = true }
sp-storage = { workspace = true }
sp-application-crypto = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-api = { version = "35.0.0", default-features = false }
sp-genesis-builder = { version = "0.16.0", default-features = false }
frame-support = { version = "39.0.0", default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-balances = { version = "40.0.1", default-features = false }

# local
ac-primitives = { workspace = true, default-features = false }

[dev-dependencies]
test-case = "3.1"

[features]
default = ["std"]
disable_target_static_assertions = [
    "sp-runtime-interface/disable_target_static_assertions",
]
std = [
    "bitvec/std",
    "codec/std",
    "either/default",
    "frame-metadata/std",
    "hex/std",
    "log/std",
    "scale-info/std",
    "serde/std",
    "serde_json/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-application-crypto/std",
    "sp-runtime-interface/std",
    "sp-storage/std",
    "sp-api/std",
    "sp-genesis-builder/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
]
mocks = []
