[package]
name = "ac-primitives"
version = "1.17.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/scs/substrate-api-client"
description = "Substrate-api-client primitive types"
readme = "README.md"
categories = ["no-std"]


[dependencies]
codec = { workspace = true }
impl-serde = { version = "0.5", default-features = false }
scale-info = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
primitive-types = { version = "0.13", default-features = false, features = ["serde_no_std", "scale-info"] }

# substrate no_std
sp-core = { workspace = true }
sp-crypto-hashing = { workspace = true }
sp-runtime = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-staking = { workspace = true }
sp-version = { workspace = true }
sp-weights = { workspace = true }
sp-application-crypto = { workspace = true }

# substrate std / wasm only - define optional dependencies directly
frame-system.workspace = true
pallet-assets = { version = "31.0.0", default-features = false, optional = true }
pallet-balances.workspace = true
pallet-contracts = { version = "31.0.0", default-features = false, optional = true }
# pallet-staking = { version = "31.0.0", default-features = false, optional = true }

[dev-dependencies]
frame-metadata-hash-extension = { version = "0.7.0", default-features = false }
sp-keyring = { workspace = true }


[features]
default = ["std"]
# To support `no_std` builds in non-32 bit environments.
disable_target_static_assertions = [
    "sp-runtime-interface/disable_target_static_assertions",
]
std = [
    "codec/std",
    "primitive-types/std",
    "scale-info/std",
    "serde/std",
    "serde_json/std",
    # substrate no_std
    "sp-core/std",
    "sp-crypto-hashing/std",
    "sp-runtime/std",
    "sp-runtime-interface/std",
    "sp-staking/std",
    "sp-version/std",
    "sp-weights/std",
    "sp-application-crypto/std",
    # substrate std
    "frame-system/std",
    "pallet-assets/std",
    "pallet-balances/std",
]
# staking-xt = ["std", "pallet-staking"]
contracts-xt = ["std", "pallet-contracts"]
