[package]
name = "ac-examples-async"
version = "1.17.0"
license = "Apache-2.0"
edition = "2021"

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "3.7", features = ['derive'] }
env_logger = "0.11"
log = "0.4"
serde_json = "1.0"
tokio = { version = "1.24", features = ["rt-multi-thread", "macros", "time"] }
tokio-util = "0.7"
wabt = "0.10"

# Substrate dependencies
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
# rococo-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" } // removed
pallet-balances = { workspace = true, default-features = false }
pallet-identity = { workspace = true, default-features = false }
pallet-recovery = { workspace = true, default-features = false }
# pallet-staking = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-keyring = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-weights = { workspace = true, default-features = false }
# sp-runtime-interface = { workspace = true, default-features = false }
sp-runtime-interface = { version = "27.0.0", default-features = false, features = ["std", "disable_target_static_assertions"] }
# staging-xcm = { version = "11.0.0", default-features = false, features = ["std"] }

# local deps
# substrate-api-client = { path = "../..", version = "1.17", features = ["staking-xt", "contracts-xt"] }
substrate-api-client = { path = "../..", version = "1.17", features = ["contracts-xt", "std"] }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    # "rococo-runtime/std", // removed
    "pallet-balances/std",
    "pallet-identity/std",
    "pallet-recovery/std",
    "sp-core/std",
    "sp-keyring/std",
    "sp-runtime/std",
    "sp-weights/std",
    "sp-runtime-interface/std",
    "substrate-api-client/std",
]